Ajustando exibição por categorias

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <section>
       <div class="container">
         <h1>Compre seu Produto das Super Psicodélicas conosco</h1>
-        <div class="products-title">Elemento x</div>
+        <div class="products-title"></div>
+        <div class="list-products"></div>
+        <div class="products-title"></div>
         <div class="list-products"></div>
       </div>
     </section>
