--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="conteudo-banner">
         <h1>MEGA PROMOÇÃO</h1>
         <p>
-          Na Compra de Qualquer produto das meninas Super Psicodélicas, ganhe
+          Na Compra de Qualquer produto das meninas Super Poderosas, ganhe
           uma luvinha de treino
         </p>
       </div>
@@ -35,7 +35,7 @@
     </div>
     <section>
       <div class="container">
-        <h1>Compre seu Produto das Super Psicodélicas conosco</h1>
+        <h1>Compre seu Produto das Super Poderosas conosco</h1>
         <div class="products-title"></div>
         <div class="list-products"></div>
       </div>
